force-app/main/default/objects/Opportunity/fields/Aceptado_por_el_asociado__c.field-meta.xml
<CustomField>
    <fullName>Aceptado_por_el_asociado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aceptado por el asociado</label>
    <type>Checkbox</type>
</CustomField>