force-app/main/default/objects/Opportunity/fields/Activar_seleccionar_archivos__c.field-meta.xml
<CustomField>
    <fullName>Activar_seleccionar_archivos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorizar carga manual</label>
    <type>Checkbox</type>
</CustomField>