force-app/main/default/objects/Opportunity/fields/Actividad_Profesion_docusign2__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Profesion_docusign2__c</fullName>
    <description>Este campo se utiliza para indicar el valor correcto del campo actividad o profesión del titular para el envio de documento de docusign</description>
    <formula>IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;DIS&quot;),&quot;Distribuidor&quot;,
			IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;DEP&quot;),&quot;Deportista&quot;,
						IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;INGE&quot;),&quot;Ingeniero Agrónomo&quot;,
									IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;SEG&quot;),&quot;Productor de Seguros&quot;,
												IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;DECO&quot;),&quot;Decorador/Diseñador&quot;,
															IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;FARM&quot;),&quot;Farmacéutico&quot;,
																		IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;JUDI&quot;),&quot;Empleado Poder Judicial&quot;,
                     IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;DOCE&quot;),&quot;Docente&quot;,
		                     	IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;TAB&quot;),&quot;Productor Tabacalero&quot;,
					                      IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;MONO&quot;),&quot;Monotributista&quot;,
						                        IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;KINE&quot;),&quot;Kinesiologo/a&quot;,
										                      	IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;ESCR&quot;),&quot;Escribano/a&quot;,
													                       IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;PASA&quot;),&quot;Pasante&quot;,
															                        IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;ING&quot;),&quot;Ingeniero&quot;,
																                          IF(ISPICKVAL(ActividadProfesion_del_titular__c,&quot;MEDI&quot;),&quot;Médico&quot;,&quot;&quot;
																																													)
																																										)
																																							)
																																				)
																																	)
																														)
																											)
																								)
																					)
																		)
															)
												)
									)
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actividad/Profesion docusign2</label>
    <type>Text</type>
</CustomField>