force-app/main/default/objects/Opportunity/fields/Actividad_Profesion_docusign3__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Profesion_docusign3__c</fullName>
    <formula>IF(ISBLANK(Actividad_Profesion_docusign__c), Actividad_Profesion_docusign2__c, Actividad_Profesion_docusign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actividad/Profesion docusign3</label>
    <type>Text</type>
</CustomField>