force-app/main/default/objects/Opportunity/fields/ActividadProfesion_del_titular__c.field-meta.xml
<CustomField>
    <fullName>ActividadProfesion_del_titular__c</fullName>
    <label>Actividad/Profesión del titular</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ODON</fullName>
                <label>Odontólogo</label>
            </value>
            <value>
                <fullName>EMPL</fullName>
                <label>Empleado</label>
            </value>
            <value>
                <fullName>PROF</fullName>
                <label>Profesional</label>
            </value>
            <value>
                <fullName>AGRO</fullName>
                <label>Productor Agropecuario</label>
            </value>
            <value>
                <fullName>EMPR</fullName>
                <label>Empresario</label>
            </value>
            <value>
                <fullName>AMA</fullName>
                <label>Ama de casa</label>
            </value>
            <value>
                <fullName>EST</fullName>
                <label>Estudiante</label>
            </value>
            <value>
                <fullName>CUEN</fullName>
                <label>Cuentapropista</label>
            </value>
            <value>
                <fullName>INDU</fullName>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>TEC</fullName>
                <label>Técnico</label>
            </value>
            <value>
                <fullName>ART</fullName>
                <label>Artesano</label>
            </value>
            <value>
                <fullName>JUBI</fullName>
                <label>Jubilado / Pensionado</label>
            </value>
            <value>
                <fullName>DESO</fullName>
                <label>Desocupado / Desempleado</label>
            </value>
            <value>
                <fullName>OTRA</fullName>
                <label>Otras</label>
            </value>
            <value>
                <fullName>TRAN</fullName>
                <label>Transportista / viajante</label>
            </value>
            <value>
                <fullName>AGRI</fullName>
                <label>Agricultor</label>
            </value>
            <value>
                <fullName>MEC</fullName>
                <label>Mecanico</label>
            </value>
            <value>
                <fullName>TAMB</fullName>
                <label>Tambero</label>
            </value>
            <value>
                <fullName>DIS</fullName>
                <label>Distribuidor</label>
            </value>
            <value>
                <fullName>DEP</fullName>
                <label>Deportista</label>
            </value>
            <value>
                <fullName>INGE</fullName>
                <label>Ingeniero Agrónomo</label>
            </value>
            <value>
                <fullName>SEG</fullName>
                <label>Productor de Seguros</label>
            </value>
            <value>
                <fullName>DECO</fullName>
                <label>Decorador / Diseñador</label>
            </value>
            <value>
                <fullName>FARM</fullName>
                <label>Farmacéutico</label>
            </value>
            <value>
                <fullName>JUDI</fullName>
                <label>Empleado Poder Judicial</label>
            </value>
            <value>
                <fullName>DOCE</fullName>
                <label>Docente</label>
            </value>
            <value>
                <fullName>TAB</fullName>
                <label>Productor Tabacalero</label>
            </value>
            <value>
                <fullName>MONO</fullName>
                <label>Monotributista</label>
            </value>
            <value>
                <fullName>KINE</fullName>
                <label>Kinesiologo/a</label>
            </value>
            <value>
                <fullName>ESCR</fullName>
                <label>Escribano/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>