force-app/main/default/objects/Opportunity/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agencia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Delegación</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Agencia)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>