force-app/main/default/objects/Opportunity/fields/Apellido_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Apellido_de_cuenta__c</fullName>
    <description>Este campo se utiliza para el envio de documento de docusign</description>
    <formula>Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido de cuenta</label>
    <type>Text</type>
</CustomField>