force-app/main/default/objects/Opportunity/fields/Apellido_del_organizador__c.field-meta.xml
<CustomField>
    <fullName>Apellido_del_organizador__c</fullName>
    <formula>Organizador_lookup__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido del organizador</label>
    <type>Text</type>
</CustomField>