force-app/main/default/objects/Opportunity/fields/Apellido_INDCOR__c.field-meta.xml
<CustomField>
    <fullName>Apellido_INDCOR__c</fullName>
    <label>Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>