force-app/main/default/objects/Opportunity/fields/Apellido_organizador__c.field-meta.xml
<CustomField>
    <fullName>Apellido_organizador__c</fullName>
    <description>Este campo se utiliza para el envio de plantillas de docusign</description>
    <formula>Organizador_lookup__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido organizador</label>
    <type>Text</type>
</CustomField>