force-app/main/default/objects/Opportunity/fields/Aportes_del_titular__c.field-meta.xml
<CustomField>
    <fullName>Aportes_del_titular__c</fullName>
    <label>Aportes del titular</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>