force-app/main/default/objects/Opportunity/fields/Asesor_comercial__c.field-meta.xml
<CustomField>
    <fullName>Asesor_comercial__c</fullName>
    <label>Asesor comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>