force-app/main/default/objects/Opportunity/fields/Asociado_ReferenteOpp__c.field-meta.xml
<CustomField>
    <fullName>Asociado_ReferenteOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Jira DES 2276 - Proyecto Referidos. Relación Lookup to Account para vincular el Código de Asociado Referido</description>
    <label>Asociado Referente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Asociado Referente)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>