force-app/main/default/objects/Opportunity/fields/Body_error__c.field-meta.xml
<CustomField>
    <fullName>Body_error__c</fullName>
    <label>Body error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>