force-app/main/default/objects/Opportunity/fields/Cambio_Manual__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Manual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cambio Manual</label>
    <type>Checkbox</type>
</CustomField>