force-app/main/default/objects/Opportunity/fields/Campos_docusign_completos__c.field-meta.xml
<CustomField>
    <fullName>Campos_docusign_completos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se utiliza para indicar que todos los campos requeridos para el envio de documento de docusign estan completos, se hacer por medio de process en oportunidad la automatizacion</description>
    <label>Campos docusign completos</label>
    <type>Checkbox</type>
</CustomField>