force-app/main/default/objects/Opportunity/fields/Canal_de_contacto_Asesor_con_cliente__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_contacto_Asesor_con_cliente__c</fullName>
    <label>Canal de contacto (Asesor con cliente)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefono</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>