force-app/main/default/objects/Opportunity/fields/Cantidad_de_Integrantes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Integrantes__c</fullName>
    <label>Cantidad de Integrantes</label>
    <summaryForeignKey>Integrante__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>