force-app/main/default/objects/Opportunity/fields/Capitas__c.field-meta.xml
<CustomField>
    <fullName>Capitas__c</fullName>
    <formula>Cantidad_de_Integrantes__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cápitas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>