force-app/main/default/objects/Opportunity/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>TextArea</type>
</CustomField>