force-app/main/default/objects/Opportunity/fields/CBU__c.field-meta.xml
<CustomField>
    <fullName>CBU__c</fullName>
    <description>Este campos sirve para marcar en verdadeto si el medio de cobro es CBU, se utiliza para el envio de plantillas con Docusign NO BORRAR</description>
    <formula>ISPICKVAL(Medio_de_cobro__c, &quot;CBU&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBU</label>
    <type>Checkbox</type>
</CustomField>