force-app/main/default/objects/Opportunity/fields/Codigo_Postal_new__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_new__c</fullName>
    <formula>Localidad_new__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Postal</label>
    <type>Text</type>
</CustomField>