force-app/main/default/objects/Opportunity/fields/Competidor__c.field-meta.xml
<CustomField>
    <fullName>Competidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competidor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Competidor)</relationshipLabel>
    <relationshipName>Competidor</relationshipName>
    <type>Lookup</type>
</CustomField>