force-app/main/default/objects/Opportunity/fields/Competidor_old_old__c.field-meta.xml
<CustomField>
    <fullName>Competidor_old_old__c</fullName>
    <label>Competidor_old_old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Swiss Medical</fullName>
            </value>
            <value>
                <fullName>OSDE</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>