force-app/main/default/objects/Opportunity/fields/Condicion_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condicion_IVA__c</fullName>
    <label>Condición IVA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Responsable Inscripto</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Consumidor Final</label>
            </value>
            <value>
                <fullName>Monotributista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>