force-app/main/default/objects/Opportunity/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>