force-app/main/default/objects/Opportunity/fields/Correo_Electronico_old__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_old__c</fullName>
    <formula>Cuenta_Personal__r.Correo_electronico__c</formula>
    <label>Correo Electrónico old</label>
    <type>Text</type>
</CustomField>