force-app/main/default/objects/Opportunity/fields/Correo_Organizador__c.field-meta.xml
<CustomField>
    <fullName>Correo_Organizador__c</fullName>
    <description>Este campo se utiliza para el envio de plantillas de Docusign</description>
    <formula>Organizador_lookup__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo Organizador</label>
    <type>Text</type>
</CustomField>