force-app/main/default/objects/Opportunity/fields/Correo_propietario__c.field-meta.xml
<CustomField>
    <fullName>Correo_propietario__c</fullName>
    <description>Este campo se utiliza para los destinatarios de docusign</description>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo propietario</label>
    <type>Text</type>
</CustomField>