force-app/main/default/objects/Opportunity/fields/Cotizacion_Corporativa_elegida__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_Corporativa_elegida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización Corporativa elegida</label>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Oportunidad Corporativa</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>