force-app/main/default/objects/Opportunity/fields/Cotizacion_elegida__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_elegida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización Individual elegida</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cotizacion__c.Oportunidad__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Cotizacion__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cotización Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>