force-app/main/default/objects/Opportunity/fields/Cotizaciones__c.field-meta.xml
<CustomField>
    <fullName>Cotizaciones__c</fullName>
    <description>Campo resumen que cuenta la cantidad cotizaciones que tiene una oportunidad. Se utiliza para una regla de validación que no deja cambiar a etapa Cotizado cuando este campo esté en blanco</description>
    <label>Cotizaciones</label>
    <summaryForeignKey>Cotizacion__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>