force-app/main/default/objects/Opportunity/fields/Cuenta_Personal__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Personal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Personal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidad Individual Corporativa</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>