force-app/main/default/objects/Opportunity/fields/CUIL_del_CBU__c.field-meta.xml
<CustomField>
    <fullName>CUIL_del_CBU__c</fullName>
    <inlineHelpText>Sin guiones</inlineHelpText>
    <label>CUIL del CBU</label>
    <length>15</length>
    <type>Text</type>
</CustomField>