force-app/main/default/objects/Opportunity/fields/CUIT__c.field-meta.xml
<CustomField>
    <fullName>CUIT__c</fullName>
    <label>CUIT (sin guiones)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>