force-app/main/default/objects/Opportunity/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegacion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Delegación</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Delegacion)</relationshipLabel>
    <relationshipName>OportunidadesDesdeDelegacion</relationshipName>
    <type>Lookup</type>
</CustomField>