force-app/main/default/objects/Opportunity/fields/Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Domicilio__c</fullName>
    <description>Este campo se utiliza para unir los campos calle, numero, piso y dpto para el mapeo de campos de envios de documentos de Docusign</description>
    <formula>Calle__c   &amp; &quot; &quot; &amp; TEXT(Numero__c) &amp; &quot;,&quot; &amp; &quot; &quot; &amp; &quot;Piso&quot; &amp; &quot; &quot; &amp; Piso__c &amp; &quot;,&quot; &amp; &quot; &quot; &amp; &quot;Dpto&quot; &amp; &quot; &quot; &amp; Dpto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domicilio</label>
    <type>Text</type>
</CustomField>