force-app/main/default/objects/Opportunity/fields/Dpto__c.field-meta.xml
<CustomField>
    <fullName>Dpto__c</fullName>
    <label>Dpto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>