force-app/main/default/objects/Opportunity/fields/Edad_cnyuge__c.field-meta.xml
<CustomField>
    <fullName>Edad_cnyuge__c</fullName>
    <label>Edad cónyuge</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>