force-app/main/default/objects/Opportunity/fields/Empresa_Corporativa__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Corporativa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa Corporativa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Empresa Corporativa)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>