force-app/main/default/objects/Opportunity/fields/Envios_docusign_completados__c.field-meta.xml
<CustomField>
    <fullName>Envios_docusign_completados__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Este campo se utiliza para contar mediante un process los documentos enviados de docusign y que hayan sidos &quot;Completados&quot;</description>
    <label>Envios docusign completados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>