force-app/main/default/objects/Opportunity/fields/Error_archivos__c.field-meta.xml
<CustomField>
    <fullName>Error_archivos__c</fullName>
    <label>Error archivos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>