force-app/main/default/objects/Opportunity/fields/Es_corporativo__c.field-meta.xml
<CustomField>
    <fullName>Es_corporativo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es corporativo</label>
    <type>Checkbox</type>
</CustomField>