force-app/main/default/objects/Opportunity/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estado_Civil</valueSetName>
    </valueSet>
</CustomField>