force-app/main/default/objects/Opportunity/fields/Estado_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_solicitud__c</fullName>
    <label>Estado de solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incompleta</fullName>
            </value>
            <value>
                <fullName>Completa</fullName>
            </value>
            <value>
                <fullName>Transformada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>