force-app/main/default/objects/Opportunity/fields/Factura_sin_papel__c.field-meta.xml
<CustomField>
    <fullName>Factura_sin_papel__c</fullName>
    <label>Factura sin papel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verdadero</fullName>
            </value>
            <value>
                <fullName>Falso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>