force-app/main/default/objects/Opportunity/fields/Facturacion_estimada_mensual__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_estimada_mensual__c</fullName>
    <label>Facturación potencial mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>