force-app/main/default/objects/Opportunity/fields/Fecha_cambio_de_estado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cambio_de_estado__c</fullName>
    <label>Fecha cambio de estado</label>
    <type>DateTime</type>
</CustomField>