force-app/main/default/objects/Opportunity/fields/Fecha_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_contacto__c</fullName>
    <label>Fecha de contacto</label>
    <type>Date</type>
</CustomField>