force-app/main/default/objects/Opportunity/fields/Fecha_de_vigencia_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vigencia_de_solicitud__c</fullName>
    <label>Fecha de vigencia de solicitud</label>
    <type>Date</type>
</CustomField>