force-app/main/default/objects/Opportunity/fields/Fecha_de_vigenciaDOCU__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vigenciaDOCU__c</fullName>
    <formula>text(DAY( Fecha_de_vigencia_de_solicitud__c )) +&apos;/&apos;+  text(MONTH( Fecha_de_vigencia_de_solicitud__c )) +&apos;/&apos;+ text(YEAR( Fecha_de_vigencia_de_solicitud__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de vigencia</label>
    <type>Text</type>
</CustomField>