force-app/main/default/objects/Opportunity/fields/Fecha_error_archivos__c.field-meta.xml
<CustomField>
    <fullName>Fecha_error_archivos__c</fullName>
    <label>Fecha error archivos</label>
    <type>DateTime</type>
</CustomField>